# music-anomalizer

./: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  .aider.llm.history  .dockerignore  .gitignore  DOCKER_INSTRUCTIONS.md  Dockerfile  Dockerfile.dev  Home.py  LICENSE  README.md  SCRIPT_CONVERSION_REFERENCE.md  TODO.md  aider.model.settings.yml  docker-compose.dev.yml  docker-compose.yml  prepare_data.py  pyproject.toml  test_network_selection.py  train.py
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.devcontainer/: devcontainer.json
app/: Home.py
app/pages/: 1_Overview.py  2_Upload_and_Analyze.py  3_test_viz.py
configs/: audio_preprocessing_config.yaml  base.yaml  exp1.yaml  exp2_deeper.yaml  single_model.yaml
configs/others/: exp1_deep.yaml  exp1_deep_small_ds.yaml  exp1_deeper.yaml  exp2.yaml  exp2_deep.yaml
docs/: DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCKER_INSTRUCTIONS.md  INDEX.md  LOGGING_STANDARDIZATION.md  NETWORK_SELECTION_IMPLEMENTATION_SUMMARY.md  SCRIPT_CONVERSION_REFERENCE.md  STREAMLIT_APP_INTEGRATION_PLAN.md  STREAMLIT_REFACTORING_DOCUMENTATION.md  TECHNICAL_REFERENCE.md  TODO.md  USER_GUIDE.md
music_anomalizer/: __init__.py  anomaly_scores_manager.py  utils.py
music_anomalizer/config/: __init__.py  checkpoint_manager.py  loader.py  schemas.py
music_anomalizer/data/: __init__.py  data_loader.py
music_anomalizer/evaluation/: __init__.py  statistics.py
music_anomalizer/models/: __init__.py  anomaly_detector.py  base_models.py  deepSVDD.py  layers.py  losses.py  networks.py  pann_clap_model.py  pann_model.py
music_anomalizer/preprocessing/: __init__.py  extract_embed.py  wav2embed.py
music_anomalizer/scripts/: __init__.py  compare_analyze_models.py  compute_anomaly_scores.py  embedding_extraction_wav.py  experiment_benchmark.py  extract_metadata.py  hp_tuning_loop_detection.py  loop_detector.py  main_exp_benchmark.py  preprocess_wav_loops.py  test_train_models.py  train_models.py
music_anomalizer/tests/: __init__.py  conftest.py  test_models_smoke.py
music_anomalizer/visualization/: __init__.py  visualizer.py
output/: anomaly_scores_bass.pkl  anomaly_scores_bass_AEwRES.pkl  anomaly_scores_guitar.pkl
pages/: 2_Upload_and_Analyze.py
script/: compare_analyze_models.py  compute_anomaly_scores.py  embedding_extraction_wav.py  hp_tuning_loop_detection.py  loop_detector.py  main_exp_benchmark.py  preprocess_wav_loops.py  test_train_models.py  train_models.py
wandb/run-20250821_104015-e5w2q99s/files/: config.yaml
(+14 files in other folders)
